--- a/linear_projection.tex
+++ b/linear_projection.tex
@@ -50,7 +50,8 @@ In the following paragraph, we list some common affine transformation matrix in 
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=\textwidth]{Translation}
+\includegraphics[width=5in]{Rotation}
+%\includegraphics[width=\textwidth]{Translation}
 \caption{Translation in 2D}\label{fig:Translation}
 \end{figure}
 
@@ -60,7 +61,7 @@ In the following paragraph, we list some common affine transformation matrix in 
 \begin{figure}[H]
 \centering
 %\includegraphics[width=\textwidth]{Rotation}
-\includegraphics[]{Rotation}
+\includegraphics[width=4.5in]{Rotation}
 \caption{Rotation in 2D}\label{fig:Rotation}
 \end{figure}
 
@@ -68,7 +69,8 @@ In the following paragraph, we list some common affine transformation matrix in 
 
 \begin{figure}[H]
 \centering
-\includegraphics[width=\textwidth]{Scaling}
+\includegraphics[width=4in]{Rotation}
+%\includegraphics[width=\textwidth]{Scaling}
 \caption{Scaling in 2D}\label{fig:Scaling}
 \end{figure}
 
