--- a/real-valued_optimization_algorithms.tex
+++ b/real-valued_optimization_algorithms.tex
@@ -405,7 +405,7 @@ It works like selection and enhance the good solutions in the archive.
 
 The initial solution construction process proceed as following.
 After evaluating $k$ randomly generates solutions, they ared stored along with their fitnesses and weights in the solution archive.
-The weights are caluated according to the equation in Figure~\ref{ACOR_solution_archive}.
+The weights are caluated according to the equation in Figure~\ref{fig:ACOR_solution_archive}.
 Then the solution archive is sorted horizontally according to the fitness so that the best solution $s_1$ is on the top
 
 For general \textit{solution construction}, we first define $m$ as the number of ants used in an iteration for sampling.
