--- a/thesis.bib
+++ b/thesis.bib
@@ -98,6 +98,48 @@
     year={2008},
     publisher={Elsevier}
 }
+
+@article{ Rousseeuw:1987:silhouettes,
+    author={Rousseeuw, Peter J},
+    title={Silhouettes: a graphical aid to the interpretation and validation of cluster analysis},
+    journal={Journal of computational and applied mathematics},
+    volume={20},
+    pages={53--65},
+    year={1987},
+    publisher={Elsevier}
+}
+
+@article{ Tibshirani:2001:gap,
+    title={Estimating the number of clusters in a data set via the gap statistic},
+    author={Tibshirani, Robert and Walther, Guenther and Hastie, Trevor},
+    journal={Journal of the Royal Statistical Society: Series B (Statistical Methodology)},
+    volume={63},
+    number={2},
+    pages={411--423},
+    year={2001},
+    publisher={Wiley Online Library}
+}
+
+@article{ Hartigan:1985:dip,
+    author={Hartigan, John A and Hartigan, PM},
+    title={The dip test of unimodality},
+    journal={The Annals of Statistics},
+    pages={70--84},
+    year={1985},
+    publisher={JSTOR}
+}
+
+@article{ Rissanen:1978:MDL,
+    author={Rissanen, Jorma},
+    title={Modeling by shortest data description},
+    journal={Automatica},
+    volume={14},
+    number={5},
+    pages={465--471},
+    year={1978},
+    publisher={Elsevier}
+}
+
 @article{ Rissanen:1984:Universal,
     author={Rissanen, Jorma},
     title={Universal coding, information, prediction, and estimation},
